<resources>
    <string name="app_name">reto 6</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="url">URL</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="products">Products/Services</string>
    <string name="classification">Classification</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="spinner_title">Filter</string>
    <string-array name="classifications">
        <item>Select a classification</item>
        <item>Consultancy</item>
        <item>Custom development</item>
        <item>Software factory</item>
    </string-array>
</resources>